# wikimedia-bot

./: .gitignore  .tool-versions  README.md  aws-infra.yaml  bot.py  handler.py  lambda_function.py  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml  update_lambda.sh
.github/workflows/: deploy.yml
aws_helpers/: dynamodb.py
helpers/: bluesky.py  dynamodb.py  fit_image_to_4096_px.py  http.py  image_resizing.py  images.py  mastodon.py  post_to_mastodon.py  post_to_twitter.py  twitter.py  wikimedia.py
src/: handler.py  handler.ts  types.ts
src/helpers/: bluesky.py  dynamodb.ts  images.py  images.ts  index.ts  mastodon.ts  twitter.ts  wikimedia.py  wikimedia.ts
