[tool.poetry]
name = "wikimedia-bot"
version = "0.2.0"
description = ""
authors = ["Nathan Heller <nathanhellbhoy@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
atproto = "^0.0.62"
boto3 = "^1.35.64"
mastodon-py = "^2.1.4"
requests = "^2.32.3"
pillow = "^11.3.0"
tweepy = "^4.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
